sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:18: error: ';' expected but ')' found.
      echange(nbValeurs-i-2,nbValeurs-i-2+1))
                                            ^